--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-waypoint": "^10.3.0",
     "sass": "^1.62.1",
     "sharp": "^0.32.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0"
   }
 }
